slurm-27531776.out
  File "t5chem/run_trainer.py", line 48
    task: TaskSettings = T5ChemTasks[args.task_type]
        ^
SyntaxError: invalid syntax
